# incredicalculator

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
crates/bitwise_expr/: Cargo.toml
crates/bitwise_expr/src/: lib.rs
crates/exp-rs-patched/: Cargo.toml  README.md  build.rs  cbindgen.toml  fix_tests.sh  meson.build  meson_helper.sh  run_tests.sh  rust-toolchain.toml  test_timing_check  test_timing_check.c  update_c_tests.sh
crates/exp-rs-patched/benches/: arena_consolidated_benchmark.rs  arena_memory_bench.rs  consolidated_benchmark.rs  simple_arena_bench.rs
crates/exp-rs-patched/examples/: analyze_difference.rs  arena_demo.rs  basic.rs  benchmark_compare.rs  eval_context.rs  exact_comparison.rs  setup_timing.rs  timing_comparison.rs
crates/exp-rs-patched/qemu_test/: README.md  batch_performance_test.c  benchmark.c  cmsis_dsp_benchmark.c  cmsis_dsp_test.c  dwt_timer_test.c  eval_context.c  exp_rs_cmsis_benchmark.c  exp_rs_integration_test.c  meson.build  register_test_functions.c  register_test_functions.h  test_batch_builder.c  test_batch_memory.c  test_batch_param_order.c  test_ffi.c  test_ffi_simple.c  test_native_function.c  test_native_function_simple.c  test_setup_timing.c
crates/exp-rs-patched/qemu_test/qemu_harness/: arm-cortex-m7-qemu.ini  cortex-m7.ld  meson.build  mps2_an500.ld  qemu_test_harness.c  qemu_test_harness.h  sbrk.c  stubs.c  syscalls.c  timer_overflow.c  vector_table_m3.c  vector_table_m7.c
crates/exp-rs-patched/src/: context.rs  engine.rs  error.rs  evaluator.rs  expression.rs  expression_functions.rs  ffi.rs  functions.rs  lexer.rs  lib.rs  types.rs
crates/exp-rs-patched/src/eval/: ast.rs  context_stack.rs  iterative.rs  mod.rs  recursion.rs  stack_ops.rs  types.rs
crates/exp-rs-patched/subprojects/: .gitignore  cmsis-core.wrap  cmsis-dsp.wrap
crates/exp-rs-patched/subprojects/packagefiles/: 0001-add-meson-build.patch  0002-add-meson-options.patch
crates/exp-rs-patched/subprojects/packagefiles/cmsis-core/: 0001-add-meson-build.patch  meson.build
crates/exp-rs-patched/subprojects/packagefiles/cmsis-dsp/: meson.build
crates/exp-rs-patched/subprojects/packagefiles/cmsis-dsp-diff/: 0001-add-meson-build.patch
crates/exp-rs-patched/targets/: cortex-m7-strict.json
crates/exp-rs-patched/tests/: arena_basic_test.rs  arena_test.rs  comprehensive_arena_test.rs  debug_parsing.rs  integration.rs  lib.rs  logical_operators_test.rs  temp_debug_option51.rs  test_empty_context.rs  test_helpers.rs  unary_test.rs  unit.rs
crates/exp-rs-patched/tests_native_c/: common_allocator.c  common_allocator.h  debug_allocations.lldb  example_multichannel.c  meson.build  test_actual_memory_free.c  test_batch_api  test_batch_api.c  test_batch_clear.c  test_batch_clear_iterations.c  test_batch_memory_tracking.c  test_clear_then_free.c  test_double_free.c  test_drop_verification.c  test_embedded_pool.c  test_empty_context.c  test_error_handling.c  test_expression_functions.c  test_memory_analysis.c  test_memory_management.c  test_memory_management_old.c  test_panic_handler.c  test_pattern_isolation.c  test_performance.c
crates/exp-rs-patched/tests_native_c/archive/: ARCHIVE_NOTES.md  ARCHIVE_SUMMARY.md  test_arena_ffi.c  test_batch_allocations.c  test_batch_builder_memory.c  test_batch_eval.c  test_batch_with_sin.c  test_bulk_timing.c  test_context_memory.c  test_direct_batch_alloc.c  test_embedded_pool_.c  test_nanotime_setup.c  test_setup_timing.c  test_setup_timing_precise.c  test_simple_eval.c  test_simple_expr_alloc.c  test_timing_detailed.c
crates/incredicalculator_core/: Cargo.toml
crates/incredicalculator_core/src/: app.rs  input.rs  lib.rs  platform.rs  shell.rs  text.rs
crates/incredicalculator_core/src/apps/: aspect_ratio_calculator.rs  calculator.rs  face_calculator.rs  mod.rs  prog_calc.rs  range_mapper_calculator.rs  sound_test.rs
incredicalculator_pc/: Cargo.toml
incredicalculator_pc/src/: main.rs
incredicalculator_rp/: Cargo.toml  build.rs  memory-rp2040.x
incredicalculator_rp/.cargo/: config.toml
incredicalculator_rp/src/: main.rs
