[package]
name = "incredicalculator_rp"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = { version = "0.1.2" }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
incredicalculator_core = { path = "../crates/incredicalculator_core" }
embedded-alloc = { version = "0.6.0", features = ["llff"] }
critical-section = "1.1"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
