[package]
name = "incredicalculator_rp"
version = "0.1.0"
edition = "2024"

[dependencies]

embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-net-wiznet = { version = "0.2.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-usb-logger = { version = "0.5.1" }
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
defmt = "1.0.1"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
[profile.release]

debug = true
