[package]
name = "incredicalculator_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bitwise_expr = { path = "../bitwise_expr" }
itoa = "1.0"
format_no_std = "1.2.0"
glam = { version = "0.30.9", default-features = false, features = ["libm", "scalar-math"] }
rgb = "0.8.52"
exp-rs = "0.2.0"
num-derive = "0.4.2"

[dependencies.num-traits]
version = "0.2"
default-features = false
